# web/openapi/openapi.json
@@ -2,7 +2,7 @@
   "openapi": "3.1.0",
   "info": {
     "title": "Intelligence Monitor",
-    "version": "0.1.0-beta.1"
+    "version": "0.1.0-beta.3"
   },
   "paths": {
     "/api/v1/health": {
@@ -9407,7 +9407,14 @@
       "TaskActivitySpanResponse": {
         "properties": {
           "taskId": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Taskid"
           },
           "taskName": {
@@ -9522,7 +9529,6 @@
         },
         "type": "object",
         "required": [
-          "taskId",
           "taskName",
           "analysisTimeRange",
           "isActive",
